# OpenEPM-Agent

./: .gitignore  README.md  config.conf  deploy.sh  openepm-agent.service  pyproject.toml
src/openepm_agent/: api.py  cli.py  config.py  details.py  dispatch.py  runner.py  systemfunctions.py
tests/: enrollmenttest.sh  test_api.py  test_details.py  test_dispatch.py  test_runner.py  tests.sh
